# My-achievements-

Java, разработка под андроид 2019 г/analyzer/: Анализатор (шаблон самсунга).pptx
python проекты 2022 г/myClicker/: README.md  board.py  game_name.py  main.py  reset.txt  resources.py  rezults.txt
python проекты 2022 г/myClicker web/: README.md  rat_race.html
Анализ калибровки механических акселерометров 2018г/: Презентация акселерометра.pptx
Математическое исследование в области самоизбегающего блуждания в рамках проектной смены в Сириусе 2021 г/: Ссылка на материалы смены.txt
Технические задачи (ТП) 2022 г/: readme.txt
Технические задачи (ТП) 2022 г/task2/: CMakeLists.txt
Технические задачи (ТП) 2022 г/task2/A/: preparing.py
Технические задачи (ТП) 2022 г/task2/B/: CMakeLists.txt  lib.cpp  lib.h
Технические задачи (ТП) 2022 г/task2/C/: main.cpp  main.h  main_test.cpp  test.cpp
Технические задачи (ТП) 2022 г/task3/: CMakeLists.txt
Технические задачи (ТП) 2022 г/task3/src/: CMakeLists.txt
алгоритмы 2022 г/Базовые структуры данных/: .Гистограмма.cpp  .Инверсии.cpp  .Минимизируем максимум.cpp  .Правильная скобочная последовательность.cpp  .Стек.cpp
алгоритмы 2022 г/Деревья отрезков/: .Range Variation Query (дерево отрезков).cpp  .Ближайший больший справа.cpp  .Вложенные отрезки.cpp  .Вторая порядковая статистика.cpp  .Звезды (дерево Фенвика).cpp  .Знакочередование.cpp
алгоритмы 2022 г/Динамическое программирование/: .ABCDE-последовательность.cpp  .Наибольшая общая возрастающая последовательность.cpp  .Наибольшая общая подпоследовательность.cpp  .Невозрастающая подпоследовательность.cpp  .Общая подпоследовательность.cpp  .Различные подпоследовательности.cpp  .Рюкзак.cpp  (+1 more)
(+48 files in other folders)
